--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "dev": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "production": "mix --production"
     },
     "devDependencies": {
+        "@vue/compiler-sfc": "^3.0.4",
         "autoprefixer": "^9.8.6",
         "cross-env": "^5.1",
-        "laravel-mix": "^4.0",
+        "laravel-mix": "^6.0.0-beta.15",
+        "postcss": "^8.2.0",
         "postcss-import": "^12.0.1",
         "postcss-nested": "^4.2.1",
         "postcss-preset-env": "^6.7.0",
         "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
-        "vue-template-compiler": "^2.6.12"
+        "vue": "^3.0.4",
+        "vue-loader": "^16.1.1"
     },
     "dependencies": {
-        "interactjs": "^1.10.1",
-        "postcss": "^7.0.35"
+        "@headlessui/vue": "^0.2.0",
+        "interactjs": "^1.10.1"
     }
 }
