--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
         "statamic/cms": "3.0.*",
-        "statamic/ssg": "^0.2.0"
+        "statamic/ssg": "^0.2.0",
+        "rias/statamic-link-it": "^2.2",
+        "statamic/cms": "3.0.*"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
