--- a/content/collections/pages.yaml
+++ b/content/collections/pages.yaml
@@ -8,3 +8,5 @@ structure:
       entry: home
     -
       entry: 3f5d25c1-a79f-4f1c-8287-654b9158e920
+    -
+      entry: 569e5eef-ddc1-4a7a-b4ad-56db11fae593
