--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/tinker": "^2.0",
         "rias/statamic-link-it": "^2.2",
         "statamic/cms": "3.1.*",
+        "statamic/seo-pro": "^2.2",
         "statamic/ssg": "^0.4.0"
     },
     "require-dev": {
