Add some more pages

--- a/content/trees/collections/pages.yaml
+++ b/content/trees/collections/pages.yaml
@@ -5,3 +5,7 @@ tree:
     entry: 3f5d25c1-a79f-4f1c-8287-654b9158e920
   -
     entry: 569e5eef-ddc1-4a7a-b4ad-56db11fae593
+  -
+    entry: 912f0cca-ba03-4693-86d7-66c2011eb9c2
+  -
+    entry: 84117082-7ed0-4205-97d6-156da58f9238
