--- a/resources/blueprints/collections/pages/pages.yaml
+++ b/resources/blueprints/collections/pages/pages.yaml
@@ -13,9 +13,11 @@ sections:
       -
         handle: template
         field:
-          type: template
+          hide_partials: true
           display: Template
-          localizable: true
+          type: template
+          icon: template
+          listable: hidden
       -
         handle: content
         field:
@@ -79,3 +81,12 @@ sections:
           max_items: 1
           listable: false
           localizable: true
+  SEO:
+    display: SEO
+    fields:
+      -
+        handle: seo
+        field:
+          type: seo_pro
+          listable: false
+          display: SEO
