--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/site.js": "/js/site.js",
-    "/css/tailwind.css": "/css/tailwind.css"
+    "/js/site.js": "/js/site.js?id=89bc9eec011563731a1a",
+    "/css/tailwind.css": "/css/tailwind.css?id=5ca27207c242c24dd5dc"
 }
