--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "@headlessui/vue": "^0.2.0",
+        "@tailwindcss/typography": "^0.4.1",
         "interactjs": "^1.10.1",
         "vue3-click-away": "^1.1.0"
     }
